fixing image on mobile viewport

--- a/less/site.less
+++ b/less/site.less
@@ -134,8 +134,8 @@ background-image: -ms-linear-gradient(bottom, #276979 0%, #1E353A 100%);
   min-height: 520px;
   height: 520px;
   margin: 0;
-//  width: 101%;
-//  min-width: 100%;
+  width: 101%;
+  min-width: 100%;
 
 }
 
